--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest unit",
-    "test:integration": "vitest integration"
+    "test": "vitest",
+    "test:integration": "vitest integration",
+    "test:unit": "vitest integration"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
