--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",    
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/react-input-mask": "^3.0.5",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.50.1",
     "react-input-mask": "3.0.0-alpha.2",
     "react-query": "^3.39.3",
+    "recharts": "^2.12.0",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
