--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@testing-library/react": "^14.2.1",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.55",
